[gd_scene load_steps=5 format=2]

[ext_resource path="res://weapons_CC0/ammo/bullet_material.tres" type="Material" id=1]
[ext_resource path="res://weapons_CC0/ammo/Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=1]
material = ExtResource( 1 )
radius = 0.005
mid_height = 0.01

[sub_resource type="CapsuleShape" id=2]
margin = 0.001
radius = 0.05
height = 0.05

[node name="Bullet" type="RigidBody" groups=["bullets"]]
collision_layer = 6
collision_mask = 6
input_ray_pickable = false
continuous_cd = true
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="BulletCleanUpTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BulletRayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 6

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="BulletCleanUpTimer" to="." method="_on_BulletCleanUpTimer_timeout"]
